// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu button renders correctly 1`] = `
<button
  className="headerButton"
  type="button"
>
  <svg
    className="buttonSvg"
  >
    menu.svg
  </svg>
</button>
`;

exports[`search button renders correctly 1`] = `
<button
  className="headerButton"
  type="button"
>
  <svg
    className="buttonSvg"
  >
    search.svg
  </svg>
</button>
`;

exports[`title renders correctly 1`] = `
<p
  className="chatListTitle"
>
  Messenger
</p>
`;
